<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/editTextLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_hint"
            android:textAllCaps="false"
            android:layout_marginTop="150dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <EditText
            android:id="@+id/ediTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/password_hint"
            android:inputType="numberPassword"
            android:textAllCaps="false" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="20dp">

            <CheckBox
                android:id="@+id/checkBoxStorage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                />

            <TextView
                android:id="@+id/textViewExternalStorage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingStart="10dp"
                android:textSize="@dimen/textViewSize"
                android:text="@string/text_view_storage_data_in_external_storage"
                />

        </LinearLayout>

        <Button
            android:id="@+id/btnOk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/btn_ok"
            android:textAllCaps="false"
            android:background="@drawable/btn_corners"
            android:backgroundTint="@color/colorBtn"
            android:textColor="@color/colorTextBtn"
            android:textSize="@dimen/btnTextSize"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <Button
            android:id="@+id/btnRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/btn_registration"
            android:textAllCaps="false"
            android:background="@drawable/btn_corners"
            android:backgroundTint="@color/colorBtn"
            android:textColor="@color/colorTextBtn"
            android:textSize="@dimen/btnTextSize"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>